# Hackathon_I

./: .gitignore  README.md  docker-compose.yml
auth-service/: .env.example  Dockerfile  package-lock.json  package.json
auth-service/src/: auth.js  index.js
backend/: pyproject.toml  requirements.txt
backend/app/auth/: routes.py
backend/app/chat/: rag_engine.py  routes.py
backend/scripts/: .env.example
frontend/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
frontend/docs/: intro.md
frontend/docs/hardware/: overview.md
frontend/docs/module-1/: introduction.md  module-1-project.md  nodes-topics-services.md  python-rclpy.md  ros2-fundamentals.md  urdf-robot-description.md
frontend/docs/module-2/: gazebo-basics.md  introduction.md  module-2-project.md  physics-simulation.md  sensor-simulation.md  unity-integration.md
frontend/docs/module-3/: introduction.md
frontend/docs/module-4/: introduction.md
frontend/src/api/: authClient.js  chatAPI.js
frontend/src/components/AuthModal/: AuthModal.css  AuthModal.jsx
frontend/src/components/ChapterActions/: ChapterActions.css  ChapterActions.jsx  index.js
frontend/src/components/ChapterControls/: ChapterControls.css  ChapterControls.jsx
frontend/src/components/RAGChatWidget/: RAGChatWidget.css  RAGChatWidget.jsx
frontend/src/css/: custom.css
frontend/src/pages/: 404.js
frontend/src/pages/auth/: callback.js
frontend/src/theme/: MDXComponents.js  NotFound.js  Root.js
